# bwenv

./: .commitlintrc.js  .env.test.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  E2E_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RELEASE_AUTOMATION_SETUP.md  RELEASE_NOTES_v0.1.0.md  TESTING.md  cliff.toml  clippy.toml  install.sh  release-plz.toml  test.sh
.github/workflows/: ci.yml  release-plz.yml  release.yml  test-enhanced.yml
benches/: env_file_benchmarks.rs
scripts/: run-e2e-tests.sh
src/: bitwarden.rs  lib.rs  logging.rs  main.rs
src-preserved/: env_file.rs  error.rs
src/bitwarden/: mock_provider.rs  mod.rs  provider.rs  sdk_provider.rs  sdk_provider_original.rs.bak
src/cli/: mod.rs
src/commands/: mod.rs
src/commands/init/: mod.rs
src/commands/pull/: mod.rs
src/commands/push/: mod.rs
src/commands/status/: mod.rs
src/commands/validate/: mod.rs
src/config/: mod.rs
src/env/: mod.rs  parser.rs
src/error/: mod.rs  types.rs
src/logging/: mod.rs
src/sync/: mod.rs
tests/: bitwarden_mock_tests.rs  file_operations_tests.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
tests/common/: fixtures.rs  helpers.rs  mod.rs
tests/docker/: Dockerfile.e2e  docker-compose.e2e.yml
tests/e2e/: README.md  cli_tests.rs  mod.rs  setup.rs
tests/integration/: mod.rs  pull_tests.rs  push_tests.rs  status_tests.rs
tests/security/: mod.rs  secrets_leakage_tests.rs
