[package]
name = "bwenv"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for managing .env secrets with Bitwarden"
license = "MIT"

[lib]
name = "bwenv"
path = "src/lib.rs"

[[bin]]
name = "bwenv"
path = "src/main.rs"

[dependencies]
# Bitwarden Secrets Manager SDK
bitwarden = { version = "1.0", features = ["secrets"] }

# CLI & Configuration
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
regex = "1.8"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
colored = "2.0"

# Logging dependencies
log = "0.4"
env_logger = "0.10"
log4rs = "1.2"
fern = { version = "0.6", features = ["colored"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
mockall = "0.11"
proptest = "1.4"
serial_test = "3.0"
criterion = "0.5"

[[bench]]
name = "env_file_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true