[package]
name = "bwenv"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "A developer-friendly CLI for managing .env files using Bitwarden Secrets Manager"
homepage = "https://github.com/yourusername/bwenv"
repository = "https://github.com/yourusername/bwenv"
readme = "README.md"
keywords = ["bitwarden", "secrets", "cli", "env", "dotenv"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "bwenv"
path = "src/lib.rs"

[[bin]]
name = "bwenv"
path = "src/main.rs"

[dependencies]
# Bitwarden Secrets Manager SDK
bitwarden = { version = "1.0", features = ["secrets"] }

# CLI & Configuration
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
regex = "1.8"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
colored = "2.0"
uuid = { version = "1.0", features = ["v4"] }

# Logging dependencies
log = "0.4"
env_logger = "0.10"
log4rs = "1.2"
fern = { version = "0.6", features = ["colored"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
mockall = "0.11"
proptest = "1.4"
serial_test = "3.0"
criterion = "0.5"
rstest = "0.23"
wiremock = "0.6"
insta = "1.34"
test-log = "0.2"
uuid = { version = "1.0", features = ["v4"] }

[[bench]]
name = "env_file_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to enable GitHub Attestations
github-attestations = true

# Config for 'cargo dist' homebrew integration
[workspace.metadata.dist.homebrew]
# Optionally specify a custom Homebrew tap to use
# tap = "yourusername/homebrew-bwenv"